Final API version + System status on frontend
